<resources>
    <string name="app_name">Chapter2-Class1</string>
    <string name="label_usuario">Usuário</string>
    <string name="label_senha">Senha</string>
    <string name="mensagem">Usuário Logado</string>
    <string name="label_site">Site</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_logar">Logar</string>
    <string name="label_email">E-mail</string>
    <string name="label_inscrever">Inscrever</string>
    <string name="label_nome">Nome</string>
</resources>
